--- a/finland.html
+++ b/finland.html
@@ -10,12 +10,12 @@
 
         <header>
         <h1>Финляндия</h1>
-        <img src="finland.jpg">
+        <img src="pictures/finland.jpg">
         <p>Финляндия – страна в Северной Европе, граничащая со Швецией, Норвегией и Россией. Столица страны Хельсинки расположена на полуострове и прилегающих к нему островах Балтийского моря.</p>
        <h3> Достопримечательности:</h3>
-        <h3>Морская крепость Свеаборг XVIII века</h3>    <img src="finlandsveaborg.jpg">
-        <h3>Модный Дизайнерский квартал</h3>    <img src="finlanddedign.jpg">
-        <h3>Огромная арктическая провинция Лапландия</h3>    <img src="finlandlapland.jpg">
+        <h3>Морская крепость Свеаборг XVIII века</h3>    <img src="pictures/finlandsveaborg.jpg">
+        <h3>Модный Дизайнерский квартал</h3>    <img src="pictures/finlanddedign.jpg">
+        <h3>Огромная арктическая провинция Лапландия</h3>    <img src="pictures/finlandlapland.jpg">
 
 
 
