--- a/index.html
+++ b/index.html
@@ -9,24 +9,27 @@
     <body>
 
         <header>
-        <h1>Страны, которые я хочу посетить</h1> <img src="trip.jpg">
+        <h1>Страны, которые я хочу посетить</h1> <img src="pictures/trip.jpg">
             <h4>Кто не любит путешествовать? Вот и я думаю что многие с радостью собрали бы сумку и рванули в интересный тур по городам. Представляю Вам несколько вариантов куда бы вы могли "Рвануть"!</h4>
 
         </header>
 <div>
         <nav>
             <ul>
-                <h2><a href="countries.html">Страны:</a></h2>
+                <h2><a href="http://bigkarta.ru/">Страны:</a></h2>
                 <li><a href="australia.html">Австралия</a></li>
                 <li><a href="finland.html">Финляндия</a></li>
                 <li><a href="kanada.html">Канада</a></li>
             </ul>
         </nav>
+ <header>
+        <h3><a href="eight-ai.html">Моя игра "Восьмёрки"!</a></h3>
 
+        </header>
         <p>
             Так же напоминаю Вам, мои дорогие читатели, где можно приобрести авиабилеты по выгодной цене!
         </p>
-        <a href="https://www.aviasales.ru/?params=TOF1"><img src="money.jpeg" alt="Авиабилеты по низким ценам"></a>
+        <a href="https://www.aviasales.ru/?params=TOF1"><img src="pictures/money.jpeg" alt="Авиабилеты по низким ценам"></a>
 
         <main>
         <p>Всем привет! Меня зовут <a href="https://www.instagram.com/pro100coolboy/">Максим</a> и здесь я Вам расскажу немного интересностей) </p>
