--- a/kanada.html
+++ b/kanada.html
@@ -10,12 +10,12 @@
 
         <header>
         <h1>Канада</h1>
-        <img src="kanada.jpg">
+        <img src="pictures/kanada.jpg">
         <p>Канада – североамериканская страна, простирающаяся от границы с США на юге до полярного круга на севере. Крупнейшие города – многолюдный Торонто, расположенный на западном побережье центр киноиндустрии Ванкувер, франкоязычные Монреаль и Квебек и столица страны Оттава.</p>
        <h3> Достопримечательности:</h3>
-        <h3>Национальный парк Банф</h3>    <img src="kanadapark.jpg">
-        <h3>Ниагарский водопад</h3>    <img src="kanadaniagara.jpg">
-        <h3>Великие озера (бассейн Атлантического океана)</h3>    <img src="kanadalakes.jpg">
+        <h3>Национальный парк Банф</h3>    <img src="pictures/kanadapark.jpg">
+        <h3>Ниагарский водопад</h3>    <img src="pictures/kanadaniagara.jpg">
+        <h3>Великие озера (бассейн Атлантического океана)</h3>    <img src="pictures/kanadalakes.jpg">
 
 
 
