--- a/australia.html
+++ b/australia.html
@@ -10,12 +10,12 @@
 
         <header>
         <h1>Австралия</h1>
-        <img src="australia.jpg">
+        <img src="pictures/australia.jpg">
         <p>Австралия – это страна, занимающая одноименный материк, который омывается Индийским и Тихим океанами. На побережьях континента находятся такие крупные города, как Сидней, Брисбен, Мельбурн, Перт и Аделаида. Столица Австралии – Канберра – расположена вдали от моря. </p>
        <h3> Достопримечательности:</h3>
-        <h3>Сиднейский оперный театр</h3>    <img src="australiatheatre.jpg">
-        <h3>Большой Барьерный риф</h3>    <img src="australiarif.jpg">
-        <h3>Аутбэк – обширная пустынная местность</h3>    <img src="australiaautback.jpg">
+        <h3>Сиднейский оперный театр</h3>    <img src="pictures/australiatheatre.jpg">
+        <h3>Большой Барьерный риф</h3>    <img src="pictures/australiarif.jpg">
+        <h3>Аутбэк – обширная пустынная местность</h3>    <img src="pictures/australiaautback.jpg">
 
 
 
