--- a/eight-ai.html
+++ b/eight-ai.html
@@ -5,7 +5,8 @@
         <title>Eight</title>
     </head>
     <body>
-<h1>Eight</h1>
+        <a href="index.html">На главную</a>
+<h1>Игра "Восьмёрки"</h1>
         <canvas id="canvas" width=300 height=300></canvas>
         <hr>
         <button id="btn_start_ai">start ai</button>
