--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </ul>
         </nav>
  <header>
-        <h3><a href="eight.html">Моя игра "Восьмёрки"!</a></h3>
+        <h3><a href="eight-ai.html">Моя игра "Восьмёрки"!</a></h3>
 
         </header>
         <p>
