--- a/eight.html
+++ b/eight.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <a href="index.html">На главную</a>
-        <h1>Eight</h1>
+<h1>Игра "Восьмёрки"</h1>
         <canvas id="canvas" width=300 height=300></canvas>
         <script src="./js/main.js" type="module"></script>
     </body>
