--- a/eight-ai.html
+++ b/eight-ai.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <a href="index.html">На главную</a>
-<h1>Игра "Восьмёрки"</h1>
+<h1>Игра "Восьмёрки с поиском"</h1>
         <canvas id="canvas" width=300 height=300></canvas>
             <hr>
         <button id="btn_start_ai">start ai</button>
